# monad-time

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.haskell-ci  monad-time.cabal
.github/workflows/: haskell-ci.yml
src/Control/Monad/: Time.hs
src/Control/Monad/Time/: Instances.hs  Utils.hs
test/: Main.hs
