name:                monad-time
version:             0.1
synopsis:            Type class for monads which carry the notion of the current time.
homepage:            https://github.com/scrive/monad-time
license:             BSD3
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          andrzej@scrive.com
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Control.Monad.Time,
                     Control.Monad.Time.Instances

  build-depends:     base < 5,
                     mtl,
                     time

  hs-source-dirs:    src

  ghc-options:       -O2 -Wall -funbox-strict-fields

  default-language:  Haskell2010

test-suite monad-time-test
  type: exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:     base, time, mtl, monad-time
