name:                monad-time
version:             0.4.1.0
synopsis:            Type class for monads which carry
                     the notion of the current time.
description:         'MonadTime' type class for monads
                     which carry the notion of the current time.
homepage:            https://github.com/scrive/monad-time
license:             BSD3
license-file:        LICENSE
author:              Andrzej Rybczak
maintainer:          Andrzej Rybczak <andrzej@rybczak.net>
copyright:           Scrive AB
category:            Control
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md CHANGELOG.md
tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.4
                      || ==9.8.1

source-repository head
  type:     git
  location: git@github.com:scrive/monad-time.git

library
  exposed-modules:   Control.Monad.Time
                     Control.Monad.Time.Utils

  build-depends:     base >=4.13 && < 5,
                     mtl,
                     time

  hs-source-dirs:    src

  ghc-options:       -Wall

  default-language:  Haskell2010

  default-extensions: FlexibleContexts
                    , FlexibleInstances

test-suite test
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:     base,
                     mtl,
                     monad-time,
                     time
